<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/components_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/components"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- A horizontal LinearLayout to hold the row of TextViews and EditTexts -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/components_str">

        <!-- TextView and EditText pairs for 7 items -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/H"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextH"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/H"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextC"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/C"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/S"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextS"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/S"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/N"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextN"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/N"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextO"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/O"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textStyle="bold">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/W"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextW"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/W"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextA"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/A"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mass_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/mass"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/components_str" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/mass_str"
        app:layout_constraintTop_toBottomOf="@id/mass_str" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:text="@string/temp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/fr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/dry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>